syntax = "proto3";
package report;

option go_package = "./server/report";

service Report {
  rpc GetCovidDataForAllStates (ReportRequest) returns (stream StateCovidData) {}
}

message ReportRequest {}

message StateCovidData {
  string state = 1;
	uint64 updated = 2;
	uint64 cases = 3;
	uint64 todayCases = 4;
	uint64 deaths = 5;
	uint64 todayDeaths = 6;
	uint64 recovered = 7;
	uint64 active = 8;
	uint64 casesPerOneMillion = 9;
	uint64 deathsPerOneMillion = 10;
	uint64 tests = 11;
	uint64 testsPerOneMillion = 12;
	uint64 population = 13;
}

// message ReportResponse {
//   repeated StateCovidData states = 1;
// }
